# my-prj-euler

./: .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.txt  build_all.sh  euler10.cc  euler11.cc  euler13.cc  euler14.cc  euler2.lisp  euler4.cc  euler5.cc  euler7.cc  euler8.cc  shippable.yml
include/: largeInt.h  myInteger.h  mydate.h  mytree.h  prime_gen.h
obsolete/: euler1.lisp  euler12.cc  euler15.cc  euler16.cc  euler3-1.lisp  euler6.cc  euler9.cc  euler_template.cc
src/: myInteger.cpp  mydate.cpp  mytree.cpp  prime_gen.cpp
testing/: googletest-release-1.7.0.tar
tests/: CMakeLists.txt  main.cpp  project_euler_tests.cpp
